--- a/dots/picom/picom.conf
+++ b/dots/picom/picom.conf
@@ -1,1 +1,20 @@
+# Shadows
+shadow = true;
+shadow-radius = 10;
+shadow-opacity = .8;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
 
+# Fading
+fading = true;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+fade-delta = 5;
+
+# Opacity
+inactive-opacity = 0.8
+
+
+# Screen tearing fix ( nvidia )
+# vsync = true;
+# backend = "glx";
