--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -5,7 +5,7 @@
  italic_font      auto
  bold_italic_font auto
 
- font_size 12
+ font_size 10
  force_ltr yes
  adjust_line_height  0
  adjust_column_width 0
@@ -24,7 +24,10 @@
  wheel_scroll_multiplier 5.0
  touch_scroll_multiplier 1.0
 : }}}
-
+function fish_prompt
+    echo -n (set_color yellow)(prompt_pwd)(set_color green)' ∮  '
+    set_color normal
+end
 : Mouse {{{
  mouse_hide_wait 0.0
  url_color #0087bd
