--- a/dots/picom/picom.conf
+++ b/dots/picom/picom.conf
@@ -50,9 +50,7 @@ rounded-corners-exclude = [
 ];
 
 round-borders = 1;
-round-borders-exclude = [
-	"window_type = 'desktop'"
-];
+round-borders-exclude = [];
 
 #################################
 #
@@ -136,9 +134,7 @@ fade-out-step = 0.03;
 # no-fading-openclose = true;
 
 # Specify a list of conditions of windows that should not be faded.
-fade-exclude = [ 
-    "class_g = 'bspwm'"
-];
+fade-exclude = [];
 
 #################################
 #
@@ -173,13 +169,12 @@ focus-exclude = [
 
 wintypes:
 {
-	desktop = { shadow = false; blur-background = false; }
-	normal = { fade = true; shadow = true; }
-	tooltip = { fade = true; shadow = false; focus = true; full-shadow = false; opacity = 0.9; }
-	dock = { shadow = false; }
-	dnd = { shadow = false; }
-	popup_menu = { opacity = 0.9; fade = false; shadow = false; }
-	dropdown_menu = { opacity = 0.9; }
-	menu = { fade = false; }
-	dialog = { fade = false; }
+  normal = { fade = true; shadow = true; }
+  tooltip = { fade = false; shadow = false; focus = true; full-shadow = false; }
+  dock = { shadow = false; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.97; fade = false; shadow = false; }
+  dropdown_menu = { opacity = 0.97; }
+  menu = { fade = false; }
+  dialog = { fade = false; }
 };
