--- a/dots/picom/picom.conf
+++ b/dots/picom/picom.conf
@@ -23,8 +23,8 @@
 
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
-backend = "glx";
-#backend = "xrender"
+#backend = "glx";
+backend = "xrender"
 
 #################################
 #
@@ -32,13 +32,13 @@ backend = "glx";
 #
 #################################
 
-glx-no-stencil = true;
+#glx-no-stencil = true;		# If glx is enabled
 
 # GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
 # My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
 # but a 20% increase when only 1/4 is.
 # My tests on nouveau show terrible slowdown.
-glx-copy-from-front = false;
+#glx-copy-from-front = false;
 
 # GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
 # My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
@@ -202,29 +202,29 @@ focus-exclude = [
 
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
 # blur-background = true;
-blur-background = false;
+#blur-background = false;	# If glx is enabled
 
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = false;
-blur-background-frame = true;
+#blur-background-frame = true;	# If glx is enabled
 
 # Do not let blur radius adjust based on window opacity.
 #blur-background-fixed = false;
-blur-background-fixed = true;
+#blur-background-fixed = true;	# If glx is enabled
 
-blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'",
-    "_GTK_FRAME_EXTENTS@:c"
-];
+#blur-background-exclude = [
+#    "window_type = 'dock'",
+#    "window_type = 'desktop'",
+#    "_GTK_FRAME_EXTENTS@:c"
+#];
 
 # Blur Settings
-blur: {
-	method = "dual_kawase";
-	strength = 10.0;
-	deviation = 1.0;
-	kernel = "11x11gaussian";
-}
+#blur: {
+#	method = "dual_kawase";
+#	strength = 10.0;
+#	deviation = 1.0;
+#	kernel = "11x11gaussian";
+#}
 
 #################################
 #
@@ -278,11 +278,11 @@ detect-client-opacity = true;
 
 # Specify refresh rate of the screen.
 # If not specified or 0, picom will try detecting this with X RandR extension.
-refresh-rate = 0;
+#refresh-rate = 0;	# refresh-rate is deprecated command
 
 # Vertical synchronization: match the refresh rate of the monitor
 # this breaks transparency in virtualbox - put a "#" before next line to fix that
-vsync = true;
+#vsync = true;	# If glx is enabled
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
