--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -22,6 +22,7 @@ adjust_column_width 0
 disable_ligatures never
 
 ##========== Colors ==========##
+# Dont usually change these.
 
 # The foreground color
 foreground       #c0b18b
@@ -38,7 +39,7 @@ selection_background #d75f5f
 ##========== Cursor ==========##
 
 # The cursor color
-cursor           #8fee96
+cursor           #c0b18b
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
@@ -257,4 +258,4 @@ map ctrl+shift+backspace restore_font_size
 #symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
 
 allow_remote_control yes
-include ./theme.conf
+#include ./theme.conf
