--- a/dots/polybar/config.ini
+++ b/dots/polybar/config.ini
@@ -115,6 +115,7 @@ foreground = ${colors.foreground}
 
 ;	=============== Fonts ===============
 font-0 = Fira Code:style=Regular
+font-1 = Material Icons:style=Regular
 
 ;	=============== Cursor ===============
 
