--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -21,24 +21,9 @@ adjust_line_height  0
 adjust_column_width 0
 disable_ligatures never
 
-##========== Colors ==========##
-# Dont usually change these.
-
-# The foreground color
-foreground       #c0b18b
-
-# The background color
-background       #262626
-background_opacity 0.9
-# The foreground for selections
-selection_foreground #2f2f2f
-
-# The background for selections
-selection_background #d75f5f
-
 ##========== Cursor ==========##
 
-# The cursor color
+# The cursor color - Almost white
 cursor           #c0b18b
 
 # The cursor shape can be one of (block, beam, underline)
@@ -147,43 +132,6 @@ active_tab_background #eee
 inactive_tab_foreground #444
 inactive_tab_background #999
 
-##========== Colors ==========##
-
-# The 16 terminal colors. There are 8 basic colors, each color has a dull and
-# bright version.
-
-# black
-color0   #2f2f2f
-color8   #656565
-
-# red
-color1   #d75f5f
-color9   #d75f5f
-
-# green
-color2    #d4d232
-color10   #8fee96
-
-# yellow
-color3    #af865a
-color11   #cd950c
-
-# blue
-color4   #22c3a1
-color12  #22c3a1
-
-# magenta
-color5   #775759
-color13  #775759
-
-# cyan
-color6   #84edb9
-color14  #84edb9
-
-# white
-color7   #c0b18b
-color15  #d8d8d8
-
 ##========== Key maps ==========##
 
 # Key mapping
@@ -258,4 +206,4 @@ map ctrl+shift+backspace restore_font_size
 #symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
 
 allow_remote_control yes
-#include ./theme.conf
+include ./gruvbox_dark_theme.conf
