--- a/dots/kitty/gruvbox_dark_theme.conf
+++ b/dots/kitty/gruvbox_dark_theme.conf
@@ -1,15 +1,21 @@
-# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
+background_opacity .85
+dynamic_background_opacity yes
 
-background  #282828
+background  #0d0d0d
 foreground  #ebdbb2
 
-cursor                #928374
-
-selection_foreground  #928374
-selection_background  #3c3836
-
-color0  #282828
-color8  #928374
+selection_background #d4be98
+selection_foreground #1d2021
+ 
+cursor #a89984
+cursor_text_color background
+ 
+active_tab_background #1d2021
+active_tab_foreground #d4be98
+active_tab_font_style bold
+inactive_tab_background #1d2021
+inactive_tab_foreground #a89984
+inactive_tab_font_style normal
 
 # red
 color1                #cc241d
