--- a/dots/kitty/gruvbox_dark_theme.conf
+++ b/dots/kitty/gruvbox_dark_theme.conf
@@ -17,37 +17,40 @@ inactive_tab_background #1d2021
 inactive_tab_foreground #a89984
 inactive_tab_font_style normal
 
+# Black
+color0		#665c54
+
 # red
-color1                #cc241d
+color1          #cc241d
 # light red
-color9                #fb4934
+color9          #fb4934
 
 # green
-color2                #98971a
+color2          #98971a
 # light green
-color10               #b8bb26
+color10         #b8bb26
 
 # yellow
-color3                #d79921
+color3          #d79921
 # light yellow
-color11               #fabd2d
+color11         #fabd2d
 
 # blue
-color4                #458588
+color4          #458588
 # light blue
-color12               #83a598
+color12         #83a598
 
 # magenta
-color5                #b16286
+color5          #b16286
 # light magenta
-color13               #d3869b
+color13 	#d3869b
 
 # cyan
-color6                #689d6a
+color6          #89b482
 # lighy cyan
-color14               #8ec07c
+color14         #89b482
 
 # light gray
-color7                #a89984
+color7          #a89984
 # dark gray
-color15               #928374
+color15         #928374
