--- a/dots/kitty/gruvbox_dark_theme.conf
+++ b/dots/kitty/gruvbox_dark_theme.conf
@@ -1,7 +1,7 @@
 background_opacity .85
 dynamic_background_opacity yes
 
-background  #0d0d0d
+background  #000000
 foreground  #ebdbb2
 
 selection_background #d4be98
@@ -10,12 +10,17 @@ selection_foreground #1d2021
 cursor #a89984
 cursor_text_color background
  
-active_tab_background #1d2021
-active_tab_foreground #d4be98
-active_tab_font_style bold
-inactive_tab_background #1d2021
-inactive_tab_foreground #a89984
-inactive_tab_font_style normal
+#active_tab_background #1d2021
+#active_tab_foreground #d4be98
+#active_tab_font_style bold
+#inactive_tab_background #1d2021
+#inactive_tab_foreground #a89984
+#inactive_tab_font_style normal
+
+active_tab_foreground           #BBBBBB
+active_tab_background           #65435E
+inactive_tab_foreground         #BBBBBB
+inactive_tab_background         #303030
 
 # Black
 color0		#665c54
