--- a/dots/kitty/gruvbox_dark_theme.conf
+++ b/dots/kitty/gruvbox_dark_theme.conf
@@ -1,61 +1,55 @@
-background_opacity .85
-dynamic_background_opacity yes
+# Tabs (  ctrl + shift +t ) colors
+active_tab_background #1d2021
+active_tab_foreground #d4be98
+active_tab_font_style bold
+inactive_tab_background #1d2021
+inactive_tab_foreground #a89984
+inactive_tab_font_style normal
 
+# General Theme
 background  #000000
 foreground  #ebdbb2
 
-selection_background #d4be98
-selection_foreground #1d2021
- 
-cursor #a89984
-cursor_text_color background
- 
-#active_tab_background #1d2021
-#active_tab_foreground #d4be98
-#active_tab_font_style bold
-#inactive_tab_background #1d2021
-#inactive_tab_foreground #a89984
-#inactive_tab_font_style normal
+cursor                #928374
 
-active_tab_foreground           #BBBBBB
-active_tab_background           #65435E
-inactive_tab_foreground         #BBBBBB
-inactive_tab_background         #303030
+selection_foreground  #928374
+selection_background  #3c3836
 
-# Black
-color0		#665c54
+# black
+color0  		#282828
+color8 			#928374
 
 # red
-color1          #cc241d
+color1                	#cc241d
 # light red
-color9          #fb4934
+color9                	#fb4934
 
 # green
-color2          #98971a
+color2                	#98971a
 # light green
-color10         #b8bb26
+color10               	#b8bb26
 
 # yellow
-color3          #d79921
+color3                	#d79921
 # light yellow
-color11         #fabd2d
+color11               	#fabd2d
 
 # blue
-color4          #458588
+color4                	#458588
 # light blue
-color12         #83a598
+color12               	#83a598
 
 # magenta
-color5          #b16286
+color5                	#b16286
 # light magenta
-color13 	#d3869b
+color13               	#d3869b
 
 # cyan
-color6          #89b482
+color6                	#689d6a
 # lighy cyan
-color14         #89b482
+color14               	#8ec07c
 
 # light gray
-color7          #a89984
+color7                	#a89984
 # dark gray
-color15         #928374
+color15               	#928374
