--- a/dots/kitty/gruvbox_dark_theme.conf
+++ b/dots/kitty/gruvbox_dark_theme.conf
@@ -1,3 +1,5 @@
+# Kitty Themes at https://github.com/dexpota/kitty-themes
+
 # Tabs (  ctrl + shift +t ) colors
 active_tab_background #1d2021
 active_tab_foreground #d4be98
