--- a/dots/polybar/colors.ini
+++ b/dots/polybar/colors.ini
@@ -11,15 +11,26 @@
 
 
 [colors]
-;transparent-gray: background = #aa282A2E
-background = #cc141414
+
+; Basics
+
+background = #1d1d1d
 background-alt = #cc373B41
 foreground = #C5C8C6
-;primary = #F0C674
-;blue: primary = #3498DB
-primary = #FCDE64
-;primary = #bb5355
-;secondary = #8ABEB7
-secondary = #F54544
 alert = #ff8000 
 disabled = #707880
+
+; GruvBox
+
+black   =   #282828
+red     =   #cc241d
+green   =   #98971a
+yellow  =   #d79921
+blue    =   #458588
+magenta =   #b16286
+cyan    =   #689d6a
+gray    =   #928374
+
+
+
+
