--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -11,31 +11,18 @@
 
 [module/date]
 type = internal/date
-
 ; Seconds to sleep between updates
-interval = 60
+interval = 1
 
-; See "https://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = %m-%d%
-; Optional time format
+date = %d-%m%
 time = %H:%M
 
-; if `date-alt` or `time-alt` is defined, clicking
-; the module will toggle between formats
 date-alt = %Y-%m-%d%
 time-alt = %H:%M:%S
 
-; Available tags:
-;   <label> (default)
 format = 🕓 <label>
 format-background = ${colors.background}
-format-foreground = ${colors.background-alt}
+format-foreground = ${colors.green}
 
-; Available tokens:
-;   %date%
-;   %time%
-; Default: %date%
 label = %date% %time%
-label-font = 3
 label-foreground = ${colors.foreground}
