--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -20,9 +20,8 @@ time = %H:%M
 date-alt = %Y-%m-%d%
 time-alt = %H:%M:%S
 
-format = 🕓 <label>
+format = <label>
 format-background = ${colors.background}
-format-foreground = ${colors.green}
 
 label = %date% %time%
 label-foreground = ${colors.foreground}
