--- a/dots/polybar/config.ini
+++ b/dots/polybar/config.ini
@@ -83,7 +83,7 @@ padding = 1
 ; or
 ;   radius-{top,bottom}-{left,right} (New in version 3.6.0)
 ; Polybar always uses the most specific radius definition for each corner.
-radius = 6.0
+radius = 0.0
 
 ;	=============== Bar Location ===============
 
@@ -100,8 +100,8 @@ offset-y = 0
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size  = 3pt
-line-color = ${colors.background-alt}
+#line-size  = 3pt
+#line-color = ${colors.background-alt}
 
 ;	=============== Colors ===============
 
