--- a/dots/polybar/colors.ini
+++ b/dots/polybar/colors.ini
@@ -9,19 +9,16 @@
 ;                                                       
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-
 [colors]
 
 ; Basics
-
-background      = #1d1d1d
-background-alt  = #cc373B41
-foreground      = #C5C8C6
-alert           = #ff8000 
+background      = #8F000000
+background-alt  = #333333
+foreground      = #CCCCCC
+alert           = #FF8000 
 disabled        = #707880
 
-; GruvBox
-
+; Gruvbox
 black   =   #282828
 red     =   #cc241d
 green   =   #98971a
@@ -30,6 +27,7 @@ blue    =   #458588
 magenta =   #b16286
 cyan    =   #689d6a
 gray    =   #928374
+
 
 
 
