--- a/dots/polybar/config.ini
+++ b/dots/polybar/config.ini
@@ -16,6 +16,7 @@
 ;
 ;==========================================================
 
+
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
@@ -25,7 +26,7 @@ pseudo-transparency = true
 ; Adjust the _NET_WM_STRUT_PARTIAL top value
 ;   Used for top aligned bars
 ; Supports any percentage with offset relative to the monitor height
-margin-bottom = 3
+margin-bottom = 0
 
 ; Adjust the _NET_WM_STRUT_PARTIAL bottom value
 ;   Used for bottom aligned bars
@@ -73,7 +74,7 @@ height = 24pt
 ; the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 1
+padding = 3
 
 ; Value used for drawing rounded corners
 ; For this to work you may also need to enable pseudo-transparency or use a
@@ -101,7 +102,7 @@ offset-y = 0
 ;   {overline,underline}-size
 ;   {overline,underline}-color
 #line-size  = 3pt
-#line-color = ${colors.background-alt}
+#line-color = ${colors.cyan}
 
 ;	=============== Colors ===============
 
@@ -114,8 +115,10 @@ foreground = ${colors.foreground}
 #border-color = 
 
 ;	=============== Fonts ===============
-font-0 = Fira Code:style=Regular
-font-1 = Material Icons:style=Regular
+; The Third option signifies the distance from the top
+
+font-0 = "Fira Code:style=Bold:size=11;2"
+font-1 = "Font Awesome 6 Free Solid:size=13;2"
 
 ;	=============== Cursor ===============
 
@@ -146,7 +149,7 @@ fixed-center = true
 #separator-foreground = ${colors.disabled}
 
 ;	Module blocks
-modules-left   = 
+modules-left   = cpu_bar memory_bar
 modules-center = date 
 modules-right  = 
 
@@ -202,4 +205,3 @@ modules-right  =
 
 ; Scale factor for tray clients
 #tray-scale = 1.0
-
