--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -9,19 +9,65 @@
 ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; 
 
+######################################################
+
 [module/date]
 type = internal/date
+
 ; Seconds to sleep between updates
 interval = 1
 
-date = %d-%m%
+; See "https://en.cppreference.com/w/cpp/io/manip/put_time"
+; for details on how to format the date string.
+date = %m-%d%
 time = %H:%M
 
+; if `date-alt` or `time-alt` is defined, clicking
+; the module will toggle between formats
 date-alt = %Y-%m-%d%
 time-alt = %H:%M:%S
 
+label = %date% %time%
+
+; Available tags:
+;   <label> (default)
 format = <label>
 format-background = ${colors.background}
+format-foreground = ${colors.foreground}
+format-prefix = " "	
+;	f017
+format-prefix-background = ${colors.background}
+format-prefix-foreground = ${colors.blue}
 
-label = %date% %time%
-label-foreground = ${colors.foreground}
+######################################################
+
+[module/cpu_bar]
+type = internal/cpu
+
+interval = 0.5
+
+format = <label>
+format-prefix = " "
+;	f2db
+format-prefix-background = ${colors.background}
+format-prefix-foreground = ${colors.red}
+
+label = "%percentage%%"
+label-background = ${colors.background}
+
+######################################################
+
+[module/memory_bar]
+type = internal/memory
+
+interval = 3
+
+format = <label>
+format-prefix = " "
+;	f538
+format-prefix-background = ${colors.background}
+format-prefix-foreground = ${colors.yellow}
+
+label = %used%
+label-background = ${colors.background}
+######################################################
