--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -70,4 +70,192 @@ format-prefix-foreground = ${colors.yellow}
 
 label = %used%
 label-background = ${colors.background}
+
+######################################################
+
+[module/xkeyboard]
+type = internal/xkeyboard
+
+blacklist-0 = num lock
+
+format-prefix            = " "
+format-prefix-foreground = ${colors.black}
+format-prefix-padding    = 1
+label-layout             = %layout%
+
+label-indicator-foreground = ${colors.alert}
+label-indicator-padding    = 1
+
+######################################################
+
+[module/pulseaudio]
+type = internal/pulseaudio
+
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+sink = alsa_output.pci-0000_12_00.3.analog-stereo
+
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+use-ui-max = false
+
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+interval = 5
+
+format-volume = <ramp-volume> <label-volume>
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-foreground = ${colors.cyan}
+label-volume = %percentage%%
+
+format-muted = <label-muted>
+format-muted-prefix = 󰝟
+format-muted-prefix-foreground = ${colors.alert}
+format-muted-background = ${colors.background}
+label-muted = " Muted"
+label-muted-background = ${colors.background}
+label-muted-foreground = ${colors.disabled}
+
+ramp-headphones-0 = 
+ramp-headphones-1 = 
+
+######################################################
+
+[module/filesystem]
+type = internal/fs
+interval = 30
+
+mount-0 = /
+format-mounted                   = <label-mounted>
+format-mounted-prefix            = 
+format-mounted-prefix-foreground = ${colors.magenta}
+format-mounted-prefix-padding    = 1
+label-mounted                    =  %free%
+
+format-unmounted        = <label-unmounted>
+format-unmounted-prefix = 
+label-unmounted         = %mountpoint%: not mounted
+
+######################################################
+
+[module/bspwm]
+type = internal/bspwm
+
+pin-workspaces = true
+inline-mode = false
+
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+
+fuzzy-match = true
+
+; Note that the label needs to correspond with the bspwm workspace name
+ws-icon-0 = I;
+ws-icon-1 = II;
+ws-icon-2 = III;
+ws-icon-3 = IV;
+ws-icon-4 = V;
+ws-icon-default = 
+
+; Separator in between workspaces
+label-separator = "∙"
+label-separator-padding = 0
+label-separator-foreground = ${colors.background}
+
+format = <label-state> <label-mode>
+
+label-focused            = %index%
+label-focused-background = ${colors.gray}
+label-focused-underline = ${colors.yellow}
+label-focused-padding    = 1
+
+label-occupied         = %index%
+label-occupied-background = ${colors.gray}
+label-occupied-padding = 1
+
+label-urgent            = %index%
+label-urgent-background = ${colors.alert}
+label-urgent-padding    = 1
+
+label-empty            = %index%
+label-empty-foreground = ${colors.foreground}
+label-empty-padding    = 1
+
+######################################################
+
+[module/sep]
+type = custom/text
+content = " "
+content-foreground = ${colors.background}
+
+######################################################
+
+[module/brightness]
+type = internal/backlight
+
+card = ${system.sys_graphics_card}
+enable-scroll = true
+format = <ramp> <label>
+label = %percentage%%
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+ramp-5 = 
+ramp-6 = 
+ramp-7 = 
+ramp-8 = 
+ramp-9 = 
+ramp-foreground = ${colors.cyan}
+
+######################################################
+
+[module/battery]
+type = internal/battery
+
+full-at = 95
+
+battery = ${system.sys_battery}
+adapter = ${system.sys_adapter}
+
+poll-interval = 2
+time-format = %H:%M
+
+format-charging = <animation-charging> <label-charging>
+format-charging-prefix = 
+
+format-discharging = <ramp-capacity> <label-discharging>
+
+format-full = <label-full>
+format-full-prefix = " "
+format-full-prefix-font = 2
+format-full-prefix-foreground = ${colors.red}
+
+label-charging = %percentage%%
+label-discharging = %percentage%%
+label-full = %percentage%%
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-font = 2
+ramp-capacity-foreground = ${colors.yellow}
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-font = 2
+animation-charging-foreground = ${colors.green}
+animation-charging-framerate = 750
+
 ######################################################
