--- a/dots/kitty/gruvbox_dark_theme.conf
+++ b/dots/kitty/gruvbox_dark_theme.conf
@@ -1,11 +1,11 @@
 # Kitty Themes at https://github.com/dexpota/kitty-themes
 
 # Tabs (  ctrl + shift +t ) colors
-active_tab_background #1d2021
-active_tab_foreground #d4be98
+active_tab_background #000000
+active_tab_foreground #ebdbb2
 active_tab_font_style bold
-inactive_tab_background #1d2021
-inactive_tab_foreground #a89984
+inactive_tab_background #000000
+inactive_tab_foreground #ebdbb2
 inactive_tab_font_style normal
 
 # General Theme
