--- a/dots/kitty/gruvbox_dark_theme.conf
+++ b/dots/kitty/gruvbox_dark_theme.conf
@@ -5,8 +5,10 @@ active_tab_background #000000
 active_tab_foreground #ebdbb2
 active_tab_font_style bold
 inactive_tab_background #000000
-inactive_tab_foreground #ebdbb2
+inactive_tab_foreground #ebdbb
 inactive_tab_font_style normal
+
+tab_separator " ┇"
 
 # General Theme
 background  #000000
