--- a/dots/polybar/config.ini
+++ b/dots/polybar/config.ini
@@ -101,8 +101,8 @@ offset-y = 0
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-#line-size  = 3pt
-#line-color = ${colors.cyan}
+line-size  = 3pt
+line-color = ${colors.red}
 
 ;	=============== Colors ===============
 
@@ -149,9 +149,9 @@ fixed-center = true
 #separator-foreground = ${colors.disabled}
 
 ;	Module blocks
-modules-left   = cpu_bar memory_bar
-modules-center = date 
-modules-right  = 
+modules-left   = date sep cpu_bar sep memory_bar sep filesystem
+modules-center = bspwm
+modules-right  = pulseaudio sep xkeyboard
 
 ;	=============== Tray ===============
 
