--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -78,9 +78,8 @@ type = internal/xkeyboard
 
 blacklist-0 = num lock
 
-format-prefix            = " "
-format-prefix-foreground = ${colors.black}
-format-prefix-padding    = 1
+format-prefix            = "  "  
+format-prefix-foreground = ${colors.blue}
 label-layout             = %layout%
 
 label-indicator-foreground = ${colors.alert}
@@ -97,7 +96,7 @@ sink = alsa_output.pci-0000_12_00.3.analog-stereo
 
 ; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
 ; Default: true
-use-ui-max = false
+use-ui-max = true
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
@@ -105,22 +104,22 @@ interval = 5
 
 format-volume = <ramp-volume> <label-volume>
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
+ramp-volume-0 = " "
+ramp-volume-1 = " "
+ramp-volume-2 = " "
 ramp-volume-foreground = ${colors.cyan}
 label-volume = %percentage%%
 
 format-muted = <label-muted>
-format-muted-prefix = 󰝟
+format-muted-prefix = " " 
 format-muted-prefix-foreground = ${colors.alert}
 format-muted-background = ${colors.background}
 label-muted = " Muted"
 label-muted-background = ${colors.background}
 label-muted-foreground = ${colors.disabled}
 
-ramp-headphones-0 = 
-ramp-headphones-1 = 
+ramp-headphones-0 = " "
+ramp-headphones-1 = " "
 
 ######################################################
 
@@ -130,13 +129,12 @@ interval = 30
 
 mount-0 = /
 format-mounted                   = <label-mounted>
-format-mounted-prefix            = 
+format-mounted-prefix            = " "
 format-mounted-prefix-foreground = ${colors.magenta}
-format-mounted-prefix-padding    = 1
-label-mounted                    =  %free%
+label-mounted                    = %free%
 
 format-unmounted        = <label-unmounted>
-format-unmounted-prefix = 
+format-unmounted-prefix = " "
 label-unmounted         = %mountpoint%: not mounted
 
 ######################################################
@@ -144,52 +142,56 @@ label-unmounted         = %mountpoint%: not mounted
 [module/bspwm]
 type = internal/bspwm
 
-pin-workspaces = true
-inline-mode = false
+#pin-workspaces = true
+#inline-mode = false
 
-enable-click = true
-enable-scroll = true
-reverse-scroll = true
+#enable-click = true
+#enable-scroll = true
+#reverse-scroll = true
 
-fuzzy-match = true
+#fuzzy-match = true
 
 ; Note that the label needs to correspond with the bspwm workspace name
-ws-icon-0 = I;
-ws-icon-1 = II;
-ws-icon-2 = III;
-ws-icon-3 = IV;
-ws-icon-4 = V;
-ws-icon-default = 
+ws-icon-0 = 1; 
+ws-icon-1 = 2; 
+ws-icon-2 = 3; 
+ws-icon-3 = 4; 
+ws-icon-4 = 5; 
+ws-icon-default =  
 
 ; Separator in between workspaces
-label-separator = "∙"
+label-separator = " "
 label-separator-padding = 0
 label-separator-foreground = ${colors.background}
 
 format = <label-state> <label-mode>
 
-label-focused            = %index%
-label-focused-background = ${colors.gray}
-label-focused-underline = ${colors.yellow}
+label-focused            = %icon%
+label-focused-background = ${colors.background}
+label-focused-foreground = ${colors.yellow}
+label-focused-underline	= ${colors.yellow}
 label-focused-padding    = 1
 
-label-occupied         = %index%
-label-occupied-background = ${colors.gray}
-label-occupied-padding = 1
+label-occupied      		= %icon%
+label-occupied-background 	= ${colors.background}
+label-occupied-foreground	= ${colors.foreground}	
+label-occupied-padding 		= 1
 
-label-urgent            = %index%
-label-urgent-background = ${colors.alert}
+label-urgent            = %icon%
+label-urgent-background = ${colors.background}
+label-urgent-foreground = ${colors.alert}
 label-urgent-padding    = 1
 
-label-empty            = %index%
-label-empty-foreground = ${colors.foreground}
+label-empty            = %icon%
+label-empty-foreground = ${colors.gray}
+label-empty-background = ${colors.background}
 label-empty-padding    = 1
 
 ######################################################
 
 [module/sep]
 type = custom/text
-content = " "
+content = "   "
 content-foreground = ${colors.background}
 
 ######################################################
@@ -202,16 +204,9 @@ enable-scroll = true
 format = <ramp> <label>
 label = %percentage%%
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
-ramp-6 = 
-ramp-7 = 
-ramp-8 = 
-ramp-9 = 
+ramp-0 = " "  
+ramp-1 = " "
+ramp-2 = " "
 ramp-foreground = ${colors.cyan}
 
 ######################################################
@@ -233,7 +228,7 @@ format-charging-prefix =
 format-discharging = <ramp-capacity> <label-discharging>
 
 format-full = <label-full>
-format-full-prefix = " "
+format-full-prefix = "  "
 format-full-prefix-font = 2
 format-full-prefix-foreground = ${colors.red}
 
@@ -241,20 +236,18 @@ label-charging = %percentage%%
 label-discharging = %percentage%%
 label-full = %percentage%%
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-font = 2
+ramp-capacity-0 = "  "
+ramp-capacity-1 = " "
+ramp-capacity-2 = "  "
+ramp-capacity-3 = " "
+ramp-capacity-4 = " "
 ramp-capacity-foreground = ${colors.yellow}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-font = 2
+animation-charging-0 = "  "
+animation-charging-1 = "  "
+animation-charging-2 = " "
+animation-charging-3 = " "
+animation-charging-4 = " "
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
