--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -19,7 +19,7 @@ interval = 1
 
 ; See "https://en.cppreference.com/w/cpp/io/manip/put_time"
 ; for details on how to format the date string.
-date = %m-%d%
+date = %d-%m%
 time = %H:%M
 
 ; if `date-alt` or `time-alt` is defined, clicking
