--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -252,3 +252,50 @@ animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
 ######################################################
+
+[network-base]
+type = internal/network
+
+; Consider an `UNKNOWN` interface state as up.
+; Some devices like USB network adapters have 
+; an unknown state, even when they're running
+; Default: false
+#unknown-as-up = true
+
+; Accumulate values from all interfaces
+; when querying for up/downspeed rate
+; Default: false
+#accumulate-stats = true
+
+; Time to Sleep
+interval = 5
+
+format-disconnected = <label-disconnected>
+format-disconnected-foreground = ${colors.disabled}
+format-disconnected-prefix = " "
+format-disconnected-prefix-foreground = ${colors.alert}
+label-disconnected = Disconnected
+
+###################################
+
+[module/wlan]
+inherit = network-base
+interface-type = wireless
+format-connected = <label-connected>
+format-connected-prefix = " "
+format-connected-prefix-foreground = ${colors.green}
+label-connected = %essid%: %downspeed%
+label-connected-foreground = ${colors.foreground}
+
+###################################
+
+[module/eth]
+inherit = network-base
+interface-type = wired
+format-connected = <label-connected>
+format-connected-prefix = " "
+format-connected-prefix-foreground = ${colors.green}
+label-connected = %downspeed%
+label-connected-foreground = ${colors.foreground}
+
+######################################################
