--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -260,15 +260,15 @@ type = internal/network
 ; Some devices like USB network adapters have 
 ; an unknown state, even when they're running
 ; Default: false
-#unknown-as-up = true
+unknown-as-up = true
 
 ; Accumulate values from all interfaces
 ; when querying for up/downspeed rate
 ; Default: false
-#accumulate-stats = true
+accumulate-stats = true
 
 ; Time to Sleep
-interval = 5
+interval = 1
 
 format-disconnected = <label-disconnected>
 format-disconnected-foreground = ${colors.disabled}
