--- a/dots/polybar/config.ini
+++ b/dots/polybar/config.ini
@@ -117,8 +117,9 @@ foreground = ${colors.foreground}
 ;	=============== Fonts ===============
 ; The Third option signifies the distance from the top
 
-font-0 = "Fira Code:style=Bold:size=11;2"
-font-1 = "Font Awesome 6 Free Solid:size=13;2"
+font-0 = "Fira Code:style=Bold:size=11;3"
+font-1 = "Font Awesome 6 Free Solid:size=13;3"
+font-2 = "Font Awesome 6 Brands Regular:size=13:3"
 
 ;	=============== Cursor ===============
 
