--- a/dots/polybar/colors.ini
+++ b/dots/polybar/colors.ini
@@ -18,6 +18,10 @@ foreground      = #CCCCCC
 alert           = #FF8000 
 disabled        = #707880
 
+; Smoking Girl wallpaper:
+pri = e77670
+sec = 7588b3
+
 ; Gruvbox
 black   =   #282828
 red     =   #cc241d
