--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -92,7 +92,7 @@ type = internal/pulseaudio
 
 ; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
 ; If not, uses default sink
-sink = alsa_output.pci-0000_12_00.3.analog-stereo
+#sink = alsa_output.pci-0000_12_00.3.analog-stereo
 
 ; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
 ; Default: true
@@ -100,7 +100,7 @@ use-ui-max = true
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 5
+interval = 1
 
 format-volume = <ramp-volume> <label-volume>
 
@@ -114,7 +114,7 @@ format-muted = <label-muted>
 format-muted-prefix = " " 
 format-muted-prefix-foreground = ${colors.alert}
 format-muted-background = ${colors.background}
-label-muted = " Muted"
+label-muted = Muted
 label-muted-background = ${colors.background}
 label-muted-foreground = ${colors.disabled}
 
@@ -129,7 +129,7 @@ interval = 30
 
 mount-0 = /
 format-mounted                   = <label-mounted>
-format-mounted-prefix            = " "
+format-mounted-prefix            = " "
 format-mounted-prefix-foreground = ${colors.magenta}
 label-mounted                    = %free%
 
@@ -299,3 +299,15 @@ label-connected = %downspeed%
 label-connected-foreground = ${colors.foreground}
 
 ######################################################
+
+[module/bluetooth]
+type = custom/script
+exec = ~/.config/polybar/scripts/bluetooth.sh
+interval = 2
+click-left = exec blueman
+click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+
+
+
