--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -37,7 +37,7 @@ format-foreground = ${colors.foreground}
 format-prefix = " "	
 ;	f017
 format-prefix-background = ${colors.background}
-format-prefix-foreground = ${colors.blue}
+format-prefix-foreground = ${colors.pri}
 
 ######################################################
 
@@ -50,7 +50,7 @@ format = <label>
 format-prefix = " "
 ;	f2db
 format-prefix-background = ${colors.background}
-format-prefix-foreground = ${colors.red}
+format-prefix-foreground = ${colors.sec}
 
 label = "%percentage%%"
 label-background = ${colors.background}
@@ -66,7 +66,7 @@ format = <label>
 format-prefix = " "
 ;	f538
 format-prefix-background = ${colors.background}
-format-prefix-foreground = ${colors.yellow}
+format-prefix-foreground = ${colors.sec}
 
 label = %used%
 label-background = ${colors.background}
@@ -79,7 +79,7 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 
 format-prefix            = "  "  
-format-prefix-foreground = ${colors.blue}
+format-prefix-foreground = ${colors.sec}
 label-layout             = %layout%
 
 label-indicator-foreground = ${colors.alert}
@@ -107,7 +107,7 @@ format-volume = <ramp-volume> <label-volume>
 ramp-volume-0 = " "
 ramp-volume-1 = " "
 ramp-volume-2 = " "
-ramp-volume-foreground = ${colors.cyan}
+ramp-volume-foreground = ${colors.pri}
 label-volume = %percentage%%
 
 format-muted = <label-muted>
@@ -130,7 +130,7 @@ interval = 30
 mount-0 = /
 format-mounted                   = <label-mounted>
 format-mounted-prefix            = " "
-format-mounted-prefix-foreground = ${colors.magenta}
+format-mounted-prefix-foreground = ${colors.sec}
 label-mounted                    = %free%
 
 format-unmounted        = <label-unmounted>
@@ -168,8 +168,8 @@ format = <label-state> <label-mode>
 
 label-focused            = %icon%
 label-focused-background = ${colors.background}
-label-focused-foreground = ${colors.yellow}
-label-focused-underline	= ${colors.yellow}
+label-focused-foreground = ${colors.pri}
+label-focused-underline	= ${colors.pri}
 label-focused-padding    = 1
 
 label-occupied      		= %icon%
@@ -207,7 +207,7 @@ label = %percentage%%
 ramp-0 = " "  
 ramp-1 = " "
 ramp-2 = " "
-ramp-foreground = ${colors.cyan}
+ramp-foreground = ${colors.pri}
 
 ######################################################
 
@@ -230,7 +230,7 @@ format-discharging = <ramp-capacity> <label-discharging>
 format-full = <label-full>
 format-full-prefix = "  "
 format-full-prefix-font = 2
-format-full-prefix-foreground = ${colors.red}
+format-full-prefix-foreground = ${colors.alert}
 
 label-charging = %percentage%%
 label-discharging = %percentage%%
@@ -241,14 +241,14 @@ ramp-capacity-1 = " "
 ramp-capacity-2 = "  "
 ramp-capacity-3 = " "
 ramp-capacity-4 = " "
-ramp-capacity-foreground = ${colors.yellow}
+ramp-capacity-foreground = ${colors.sec}
 
 animation-charging-0 = "  "
 animation-charging-1 = "  "
 animation-charging-2 = " "
 animation-charging-3 = " "
 animation-charging-4 = " "
-animation-charging-foreground = ${colors.green}
+animation-charging-foreground = ${colors.pri}
 animation-charging-framerate = 750
 
 ######################################################
@@ -283,7 +283,7 @@ inherit = network-base
 interface-type = wireless
 format-connected = <label-connected>
 format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.green}
+format-connected-prefix-foreground = ${colors.sec}
 label-connected = %essid%: %downspeed%
 label-connected-foreground = ${colors.foreground}
 
@@ -294,7 +294,7 @@ inherit = network-base
 interface-type = wired
 format-connected = <label-connected>
 format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.green}
+format-connected-prefix-foreground = ${colors.sec}
 label-connected = %downspeed%
 label-connected-foreground = ${colors.foreground}
 
