--- a/dots/polybar/config.ini
+++ b/dots/polybar/config.ini
@@ -152,7 +152,7 @@ fixed-center = true
 ;	Module blocks
 modules-left   = date sep cpu_bar sep memory_bar sep filesystem
 modules-center = bspwm
-modules-right  = pulseaudio sep xkeyboard
+modules-right  = pulseaudio sep wlan eth sep xkeyboard
 
 ;	=============== Tray ===============
 
