--- a/dots/polybar/colors.ini
+++ b/dots/polybar/colors.ini
@@ -15,7 +15,7 @@
 background      = #8F000000
 background-alt  = #333333
 foreground      = #CCCCCC
-alert           = #FF8000 
+alert           = #FFBF00 
 disabled        = #707880
 
 ; Smoking Girl wallpaper:
