--- a/dots/polybar/system.ini
+++ b/dots/polybar/system.ini
@@ -3,15 +3,17 @@
 ;; Run `ls -1 /sys/class/power_supply/` to list list batteries and adapters.
 ;; Run `ls -1 /sys/class/backlight/` to list available graphics cards.
 ;; Run `ip link | awk '/state UP/ {print $2}' | tr -d :` to get active network interface.
+;; Use the following command to list available cards:
+;; $ ls -1 /sys/class/backlight/
 ;;
 ;; Polybar Variables For Modules :
-;; card = ${system.sys_graphics_card}
-;; battery = ${system.sys_battery}
-;; adapter = ${system.sys_adapter}
+;; card = ${system.sys_graphics_card}   ;; For Brightness
+;; battery = ${system.sys_battery}      ;; For Battery
+;; adapter = ${system.sys_adapter}      ;; For Battery
 ;; interface = ${system.sys_network_interface}
 
 [system]
 sys_adapter = ACAD
 sys_battery = BAT1
-sys_graphics_card = amdgpu_bl0
-sys_network_interface = wlan0
+sys_graphics_card = intel_backlight
+#sys_network_interface = wlan0
