--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -199,8 +199,34 @@ content-foreground = ${colors.background}
 [module/brightness]
 type = internal/backlight
 
+
+
+
+[module/backlight]
+type = internal/backlight
+
+; Use the following command to list available cards:
+; $ ls -1 /sys/class/backlight/
 card = ${system.sys_graphics_card}
+
+; Use the `/sys/class/backlight/.../actual-brightness` file
+; rather than the regular `brightness` file.
+; Defaults to true unless the specified card is an amdgpu backlight.
+; New in version 3.6.0
+use-actual-brightness = true
+
+; Enable changing the backlight with the scroll wheel
+; NOTE: This may require additional configuration on some systems. Polybar will
+; write to `/sys/class/backlight/${self.card}/brightness` which requires polybar
+; to have write access to that file.
+; DO NOT RUN POLYBAR AS ROOT. 
+; The recommended way is to add the user to the
+; `video` group and give that group write-privileges for the `brightness` file.
+; See the ArchWiki for more information:
+; https://wiki.archlinux.org/index.php/Backlight#ACPI
+; Default: false
 enable-scroll = true
+
 format = <ramp> <label>
 label = %percentage%%
 
@@ -237,17 +263,17 @@ label-discharging = %percentage%%
 label-full = %percentage%%
 
 ramp-capacity-0 = "  "
-ramp-capacity-1 = " "
+ramp-capacity-1 = "  "
 ramp-capacity-2 = "  "
-ramp-capacity-3 = " "
-ramp-capacity-4 = " "
+ramp-capacity-3 = "  "
+ramp-capacity-4 = "  "
 ramp-capacity-foreground = ${colors.sec}
 
 animation-charging-0 = "  "
 animation-charging-1 = "  "
-animation-charging-2 = " "
-animation-charging-3 = " "
-animation-charging-4 = " "
+animation-charging-2 = "  "
+animation-charging-3 = "  "
+animation-charging-4 = "  "
 animation-charging-foreground = ${colors.pri}
 animation-charging-framerate = 750
 
