--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -121,7 +121,16 @@ inactive_border_color #cccccc
 # Tab-bar settings
 tab_bar_edge bottom
 tab_bar_margin_width 0.0
-tab_bar_style powerline
+tab_bar_style slant
+tab_bar_align left
+
+# Tabs (  ctrl + shift +t ) colors
+active_tab_background #333333
+active_tab_foreground #e77670
+active_tab_font_style bold
+inactive_tab_background #1a1a1a
+inactive_tab_foreground #57120f
+inactive_tab_font_style normal
 
 ##========== Key maps ==========##
 
@@ -183,4 +192,56 @@ map ctrl+shift+down    decrease_font_size
 map ctrl+shift+backspace restore_font_size
 
 allow_remote_control yes
-include ./gruvbox_dark_theme.conf
+
+##========== Colors ==========##
+
+# General Theme
+background  #000000
+foreground  #cccccc
+# Alternative foreground  #ebdbb2
+
+## Commented Out colors - may be worth playing around later
+#cursor                #928374
+#selection_foreground  #928374
+#selection_background  #3c3836
+
+# black
+#color0  		#282828
+#color8 			#928374
+
+# red
+#color1                	#cc241d
+# light red
+#color9                	#fb4934
+
+# green
+#color2                	#98971a
+# light green
+#color10               	#b8bb26
+
+# yellow
+#color3                	#d79921
+# light yellow
+#color11               	#fabd2d
+
+# blue
+#color4                	#458588
+# light blue
+#color12               	#83a598
+
+# magenta
+#color5                	#b16286
+# light magenta
+#color13               	#d3869b
+
+# cyan
+#color6                	#689d6a
+# lighy cyan
+#color14               	#8ec07c
+
+# light gray
+#color7                	#a89984
+# dark gray
+#color15               	#928374
+
+
