--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -200,48 +200,42 @@ background  #000000
 foreground  #cccccc
 # Alternative foreground  #ebdbb2
 
-## Commented Out colors - may be worth playing around later
+# Colors
 #cursor                #928374
-#selection_foreground  #928374
-#selection_background  #3c3836
+
+selection_foreground  #000000
+selection_background  #928374
 
 # black
-#color0  		#282828
-#color8 			#928374
+color0  		#262626
+color8 			#404040
 
 # red
-#color1                	#cc241d
+color1                	#e77670
 # light red
-#color9                	#fb4934
-
-# green
-#color2                	#98971a
-# light green
-#color10               	#b8bb26
+color9                	#e77670
 
 # yellow
-#color3                	#d79921
+color3                	#FFBF00 
 # light yellow
-#color11               	#fabd2d
+color11               	#FFBF00
 
 # blue
-#color4                	#458588
+color4                	#7588b3
 # light blue
-#color12               	#83a598
-
-# magenta
-#color5                	#b16286
-# light magenta
-#color13               	#d3869b
-
-# cyan
-#color6                	#689d6a
-# lighy cyan
-#color14               	#8ec07c
+color12               	#7588b3
 
 # light gray
-#color7                	#a89984
+color7                	#928374
 # dark gray
-#color15               	#928374
+color15               	#928374
 
 
+# magenta color5       	#b16286
+# light magenta color13	#d3869b
+
+# cyan color6 		#689d6a
+# lighy cyan color14 	#8ec07c
+
+# green color2         	#98971a
+# light green color10  	#b8bb26
