--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -129,7 +129,7 @@ active_tab_background #333333
 active_tab_foreground #e77670
 active_tab_font_style bold
 inactive_tab_background #1a1a1a
-inactive_tab_foreground #57120f
+inactive_tab_foreground #e77670
 inactive_tab_font_style normal
 
 ##========== Key maps ==========##
