--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -230,12 +230,17 @@ color7                	#928374
 # dark gray
 color15               	#928374
 
+# magenta 
+color5       	       	#b16286
+# light magenta
+color13			#d3869b
 
-# magenta color5       	#b16286
-# light magenta color13	#d3869b
+# cyan 
+color6 			#689d6a
+# lighy cyan
+color14 		#8ec07c
 
-# cyan color6 		#689d6a
-# lighy cyan color14 	#8ec07c
-
-# green color2         	#98971a
-# light green color10  	#b8bb26
+# green 
+color2	         	#98971a
+# light green
+color10		  	#b8bb26
