--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -197,50 +197,52 @@ allow_remote_control yes
 
 # General Theme
 background  #000000
-foreground  #cccccc
-# Alternative foreground  #ebdbb2
+foreground  #ffffe6
 
 # Colors
-#cursor                #928374
+#cursor                	#8f8070
 
-selection_foreground  #000000
-selection_background  #928374
+selection_foreground  	#000000
+selection_background  	#8f8070
 
 # black
 color0  		#262626
 color8 			#404040
 
 # red
-color1                	#e77670
+color1                	#de433b
 # light red
 color9                	#e77670
 
+# green 
+color2	         	#689d6a
+# light green
+color10		  	#8ec07c
+
 # yellow
-color3                	#FFBF00 
+color3                	#ffbf00
 # light yellow
-color11               	#FFBF00
+color11               	#ffdf80
 
 # blue
 color4                	#7588b3
 # light blue
 color12               	#7588b3
 
-# light gray
-color7                	#928374
-# dark gray
-color15               	#928374
-
 # magenta 
 color5       	       	#b16286
 # light magenta
 color13			#d3869b
 
-# cyan 
-color6 			#689d6a
+# cyan -- Light Red
+color6 			#e77670
 # lighy cyan
-color14 		#8ec07c
+color14 		#85e0e0	
 
-# green 
-color2	         	#98971a
-# light green
-color10		  	#b8bb26
+# light gray -- Browny
+color7                	#a5998d
+# dark gray -- Browny
+color15               	#72665a
+
+
+
