--- a/dots/kitty/kitty.conf
+++ b/dots/kitty/kitty.conf
@@ -225,7 +225,7 @@ color3                	#ffbf00
 color11               	#ffdf80
 
 # blue
-color4                	#7588b3
+color4                	#516594
 # light blue
 color12               	#7588b3
 
