--- a/dots/picom/picom.conf
+++ b/dots/picom/picom.conf
@@ -69,40 +69,36 @@ backend = "xrender"
 #
 #################################
 
-corner-radius = 6;
+corner-radius = 8;
 rounded-corners-exclude = [
-#    "window_type = 'normal'",
-	"window_type = 'dropdown_menu'",
-	"window_type = 'popup_menu'",
-	"window_type = 'popup'",
 	"class_g = 'Polybar'",
 ];
 
-round-borders = 1;
+round-borders = 3;
 round-borders-exclude = [
 	"window_type = 'desktop'"
 ];
 
 #################################
 #
-# Shadows
+# Shadows - Inactive
 #
 #################################
 
-# Enabled client-side shadows on windows.
-shadow = true;
-# The blur radius for shadows. (default 12)
-shadow-radius = 15;
-# The left offset for shadows. (default -15)
-shadow-offset-x = -20;
-# The top offset for shadows. (default -15)
-shadow-offset-y = -15;
-# The translucency for shadows. (default .75)
-shadow-opacity = 0.7;
+## Enabled client-side shadows on windows.
+#3shadow = true;
+## The blur radius for shadows. (default 12)
+#shadow-radius = 15;
+## The left offset for shadows. (default -15)
+#shadow-offset-x = -20;
+## The top offset for shadows. (default -15)
+#shadow-offset-y = -15;
+## The translucency for shadows. (default .75)
+#shadow-opacity = 0.7;
 
-log-level = "warn";
-#change your username here
-#log-file = "/home/erik/.config/compton.log";
+#log-level = "warn";
+##change your username here
+##log-file = "/home/erik/.config/compton.log";
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -112,49 +108,48 @@ log-level = "warn";
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-shadow-exclude = [
-
+##shadow-exclude = [
 #	Excluded by Original Author
-
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "class_g = 'Firefox' && argb",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g = 'Cairo-clock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    
+#
+#    "name = 'Notification'",
+#    "name = 'Plank'",
+#    "name = 'Docky'",
+#    "name = 'Kupfer'",
+#    "name = 'xfce4-notifyd'",
+#    "name *= 'VLC'",
+#    "name *= 'compton'",
+#    "name *= 'picom'",
+#    "name *= 'Chromium'",
+#    "name *= 'Chrome'",
+#    "class_g = 'Firefox' && argb",
+#    "class_g = 'Conky'",
+#    "class_g = 'Kupfer'",
+#    "class_g = 'Synapse'",
+#    "class_g ?= 'Notify-osd'",
+#    "class_g ?= 'Cairo-dock'",
+#    "class_g = 'Cairo-clock'",
+#    "class_g ?= 'Xfce4-notifyd'",
+#    "class_g ?= 'Xfce4-power-manager'",
+#    "_GTK_FRAME_EXTENTS@:c",
+#   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+#    
 #	Excluded by Design
-    
-    "class_g = 'Polybar'",
-    "class_g = 'Rofi'"
-
-];
+#    
+#    "class_g = 'Polybar'",
+#    "class_g = 'Rofi'"
+#
+#];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
+#shadow-ignore-shaped = false;
 
 #################################
 #
-# Fading
+# Fading - Inactive
 #
 #################################
 
 # Fade windows during opacity changes.
-#fading = true;
+##fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
 #fade-delta = 4;
 # Opacity change between steps while fading in. (default 0.028).
@@ -163,11 +158,12 @@ shadow-ignore-shaped = false;
 #fade-out-step = 0.03;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
-
+#
 # Specify a list of conditions of windows that should not be faded.
 #fade-exclude = [ 
 #    "class_g = 'bspwm'"
 #];
+#
 
 #################################
 #
@@ -187,7 +183,7 @@ inactive-opacity-override = false;
 
 opacity-rule = [
   "100:class_g = 'Polybar'",
-  "85:class_g  = 'kitty'"
+  "90:class_g  = 'kitty'"
 ];
 
 focus-exclude = [
@@ -196,22 +192,22 @@ focus-exclude = [
 
 #################################
 #
-# Blur
+# Blur - Inactive
 #
 #################################
 
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
 # blur-background = true;
 #blur-background = false;	# If glx is enabled
-
+#
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = false;
 #blur-background-frame = true;	# If glx is enabled
-
+#
 # Do not let blur radius adjust based on window opacity.
 #blur-background-fixed = false;
 #blur-background-fixed = true;	# If glx is enabled
-
+#
 #blur-background-exclude = [
 #    "window_type = 'dock'",
 #    "window_type = 'desktop'",
@@ -302,4 +298,3 @@ detect-transient = true;
 # Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
 # WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
 detect-client-leader = true;
-
