--- a/dots/picom/picom.conf
+++ b/dots/picom/picom.conf
@@ -86,7 +86,7 @@ round-borders-exclude = [
 #################################
 
 ## Enabled client-side shadows on windows.
-#3shadow = true;
+#shadow = true;
 ## The blur radius for shadows. (default 12)
 #shadow-radius = 15;
 ## The left offset for shadows. (default -15)
@@ -101,9 +101,9 @@ round-borders-exclude = [
 ##log-file = "/home/erik/.config/compton.log";
 
 # Set if you want different colour shadows
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
+## shadow-red = 0.0;
+## shadow-green = 0.0;
+## shadow-blue = 0.0;
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
@@ -167,28 +167,28 @@ round-borders-exclude = [
 
 #################################
 #
-# Opacity / Transparency
+# Opacity / Transparency - Inactive
 #
 #################################
 
-inactive-opacity = 1;
-active-opacity = 1;
-frame-opacity = 1;
-inactive-opacity-override = false;
+#inactive-opacity = 1;
+#active-opacity = 1;
+#frame-opacity = 1;
+#inactive-opacity-override = false;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
 # Do not let dimness adjust based on window opacity.
-# inactive-dim-fixed = true;
+## inactive-dim-fixed = true; #Keep off
 
-opacity-rule = [
-  "100:class_g = 'Polybar'",
-  "90:class_g  = 'kitty'"
-];
+#opacity-rule = [
+#  "100:class_g = 'Polybar'",
+#  "90:class_g  = 'kitty'"
+#];
 
-focus-exclude = [
-  "class_g = 'Polybar'"
-];
+#focus-exclude = [
+#  "class_g = 'Polybar'"
+#];
 
 #################################
 #
@@ -198,15 +198,15 @@ focus-exclude = [
 
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
 # blur-background = true;
-#blur-background = false;	# If glx is enabled
+##blur-background = false;	# If glx is enabled
 #
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = false;
-#blur-background-frame = true;	# If glx is enabled
+##blur-background-frame = true;	# If glx is enabled
 #
 # Do not let blur radius adjust based on window opacity.
 #blur-background-fixed = false;
-#blur-background-fixed = true;	# If glx is enabled
+##blur-background-fixed = true;	# If glx is enabled
 #
 #blur-background-exclude = [
 #    "window_type = 'dock'",
