--- a/dots/picom/picom.conf
+++ b/dots/picom/picom.conf
@@ -171,16 +171,18 @@ round-borders-exclude = [
 #
 #################################
 
+# Turn these On
 #inactive-opacity = 1;
 #active-opacity = 1;
 #frame-opacity = 1;
 #inactive-opacity-override = false;
 
-# Dim inactive windows. (0.0 - 1.0)
-# inactive-dim = 0.2;
-# Do not let dimness adjust based on window opacity.
-## inactive-dim-fixed = true; #Keep off
+### Dim inactive windows. (0.0 - 1.0)
+### inactive-dim = 0.2;
+### Do not let dimness adjust based on window opacity.
+### inactive-dim-fixed = true; #Keep off
 
+# Set up Opacity Rules
 #opacity-rule = [
 #  "100:class_g = 'Polybar'",
 #  "90:class_g  = 'kitty'"
