--- a/dots/polybar/modules.ini
+++ b/dots/polybar/modules.ini
@@ -78,7 +78,7 @@ type = internal/xkeyboard
 
 blacklist-0 = num lock
 
-format-prefix            = "  "  
+format-prefix            = " "  
 format-prefix-foreground = ${colors.sec}
 label-layout             = %layout%
 
@@ -104,22 +104,22 @@ interval = 5
 
 format-volume = <ramp-volume> <label-volume>
 
-ramp-volume-0 = " "
-ramp-volume-1 = " "
-ramp-volume-2 = " "
+ramp-volume-0 =  
+ramp-volume-1 =  
+ramp-volume-2 =  
 ramp-volume-foreground = ${colors.pri}
 label-volume = %percentage%%
 
 format-muted = <label-muted>
-format-muted-prefix = " " 
+format-muted-prefix =   
 format-muted-prefix-foreground = ${colors.alert}
 format-muted-background = ${colors.background}
 label-muted = Muted
 label-muted-background = ${colors.background}
 label-muted-foreground = ${colors.disabled}
 
-ramp-headphones-0 = " "
-ramp-headphones-1 = " "
+ramp-headphones-0 =  
+ramp-headphones-1 =  
 
 ######################################################
 
@@ -191,7 +191,7 @@ label-empty-padding    = 1
 
 [module/sep]
 type = custom/text
-content = "   "
+content = " "
 content-foreground = ${colors.background}
 
 ######################################################
@@ -224,9 +224,9 @@ enable-scroll = true
 format = <ramp> <label>
 label = %percentage%%
 
-ramp-0 = " "  
-ramp-1 = " "
-ramp-2 = " "
+ramp-0 =    
+ramp-1 =  
+ramp-2 =  
 ramp-foreground = ${colors.pri}
 
 ######################################################
@@ -261,17 +261,15 @@ adapter = ${system.sys_adapter}
 time-format = %H:%M
 
 format-charging = <animation-charging> <label-charging>
-format-charging-prefix = " "
-format-charging-prefix-font = 6
+format-charging-prefix = 
 format-charging-prefix-foreground = ${colors.alert}
 
 format-discharging = <ramp-capacity> <label-discharging>
 format-low = <label-low>
 
 format-full = <label-full>
-format-full-prefix = "  "
-format-full-prefix-font = 6
-format-full-prefix-foreground = ${colors.alert}
+format-full-prefix =  
+format-full-prefix-foreground = ${colors.pri}
 
 label-charging = %percentage%%
 label-discharging = %percentage%%
@@ -280,18 +278,18 @@ label-full = %percentage%%
 label-low = Low Battery: %time%
 label-low-foreground = ${colors.alert}
 
-ramp-capacity-0 = "  "
-ramp-capacity-1 = "  "
-ramp-capacity-2 = "  "
-ramp-capacity-3 = "  "
-ramp-capacity-4 = "  "
+ramp-capacity-0 =  
+ramp-capacity-1 =  
+ramp-capacity-2 =  
+ramp-capacity-3 =  
+ramp-capacity-4 =  
 ramp-capacity-foreground = ${colors.pri}
 
-animation-charging-0 = "  "
-animation-charging-1 = "  "
-animation-charging-2 = "  "
-animation-charging-3 = "  "
-animation-charging-4 = "  "
+animation-charging-0 =  
+animation-charging-1 =  
+animation-charging-2 =  
+animation-charging-3 =  
+animation-charging-4 =  
 animation-charging-foreground = ${colors.pri}
 animation-charging-framerate = 750
 
@@ -328,7 +326,7 @@ interface-type = wireless
 format-connected = <label-connected>
 format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.sec}
-label-connected = %essid%: %downspeed%
+label-connected = %essid%
 label-connected-foreground = ${colors.foreground}
 
 ###################################
@@ -352,6 +350,3 @@ click-left = exec blueman
 click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
-
-
-
